# Mail-Client-CLI-RUST

./: Cargo.toml  README.md
src/: main.rs
