[package]
name = "mail__client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

lettre = "0.9.4"
lettre_email = "0.9.4"
tokio = { version = "1", features = ["full"] }
native-tls = "0.2.8"
async-imap = "0.9.0"
tokio-native-tls = "0.3.0"
tokio-imap="0.4.0"
imap="2.2.1"


